--- a/src/style/output.css
+++ b/src/style/output.css
@@ -566,8 +566,24 @@ video {
   position: fixed;
 }
 
+.absolute{
+  position: absolute;
+}
+
 .relative{
   position: relative;
+}
+
+.bottom-0{
+  bottom: 0px;
+}
+
+.left-0{
+  left: 0px;
+}
+
+.right-0{
+  right: 0px;
 }
 
 .top-0{
@@ -632,20 +648,12 @@ video {
   height: 100%;
 }
 
-.max-h-\[400px\]{
-  max-height: 400px;
-}
-
 .w-full{
   width: 100%;
 }
 
 .max-w-\[940px\]{
   max-width: 940px;
-}
-
-.max-w-\[960px\]{
-  max-width: 960px;
 }
 
 .origin-bottom-left{
@@ -656,16 +664,12 @@ video {
   transform-origin: top left;
 }
 
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-rows-2{
-  grid-template-rows: repeat(2, minmax(0, 1fr));
-}
-
 .flex-col{
   flex-direction: column;
+}
+
+.flex-wrap{
+  flex-wrap: wrap;
 }
 
 .items-start{
@@ -695,6 +699,10 @@ video {
 .gap-x-0{
   -moz-column-gap: 0px;
        column-gap: 0px;
+}
+
+.overflow-hidden{
+  overflow: hidden;
 }
 
 .overflow-x-hidden{
@@ -771,11 +779,6 @@ video {
   padding-right: 7rem;
 }
 
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -799,6 +802,10 @@ video {
 .py-9{
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
+}
+
+.pt-\[56\.25\%\]{
+  padding-top: 56.25%;
 }
 
 .text-center{
@@ -919,6 +926,77 @@ hr.bottom-dashed{
   width: 40px;
   border-style: none;
   background-color: rgba(56,58,60,0.9);
+}
+
+/* ? BUTTON */
+
+button{
+  position: relative;
+  margin: 0 6px 4px 12px;
+  cursor: pointer;
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 250 247 / var(--tw-bg-opacity));
+  padding: 4px 8px 4px 12px;
+  font-size: 12px;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(56 58 60 / var(--tw-text-opacity));
+  border-bottom-right-radius: 3px;
+  border-top-right-radius: 3px;
+  box-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+}
+
+button::before{
+  position: absolute;
+  top: 0px;
+  left: -12px;
+  float: left;
+  height: 0px;
+  width: 0px;
+  border-color: rgba(0,0,0,0) #FCFAF7 rgba(0,0,0,0) rgba(0,0,0,0);
+  border-style: solid;
+  content: var(--tw-content);
+  border-width: 12px 12px 12px 0;
+  content: "";
+}
+
+button::after{
+  position: absolute;
+  top: 11px;
+  left: 0px;
+  height: 4px;
+  width: 4px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(149 156 163 / var(--tw-bg-opacity));
+  content: var(--tw-content);
+  border-radius: 2px;
+  content: "";
+}
+
+@media (min-width: 1280px){
+  button{
+    --tw-scale-x: 1.25;
+    --tw-scale-y: 1.25;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+}
+
+button.active{
+  --tw-bg-opacity: 1;
+  background-color: rgb(56 58 60 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(252 250 247 / var(--tw-text-opacity));
+}
+
+button.active::before{
+  content: var(--tw-content);
+  border-color: rgba(0,0,0,0) #383A3C rgba(0,0,0,0) rgba(0,0,0,0);
+}
+
+/* ? FILTERABLES */
+
+#filterables div.hide{
+  display: none;
 }
 
 /* ? NAVBAR NAVIGATION */
@@ -1098,11 +1176,6 @@ hr.bottom-dashed{
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .max-md\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
   .max-md\:opacity-0{
     opacity: 0;
   }
@@ -1123,13 +1196,35 @@ hr.bottom-dashed{
     display: none;
   }
 
+  .md\:grid-cols-1{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-1{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 }
 
 @media (min-width: 1280px){
   .xl\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .xl\:gap-3{
+    gap: 0.75rem;
+  }
+
+  .xl\:gap-5{
+    gap: 1.25rem;
   }
 }
