--- a/src/style/output.css
+++ b/src/style/output.css
@@ -624,14 +624,6 @@ video {
   margin-top: 68px;
 }
 
-.mt-\[70px\]{
-  margin-top: 70px;
-}
-
-.mt-\[90px\]{
-  margin-top: 90px;
-}
-
 .flex{
   display: flex;
 }
@@ -656,16 +648,12 @@ video {
   height: 100%;
 }
 
-.w-1\/2{
-  width: 50%;
+.w-3\/4{
+  width: 75%;
 }
 
 .w-full{
   width: 100%;
-}
-
-.w-3\/4{
-  width: 75%;
 }
 
 .origin-bottom-left{
@@ -875,11 +863,6 @@ video {
   line-height: 2.25rem;
 }
 
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
@@ -888,6 +871,11 @@ video {
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-xl{
@@ -960,8 +948,14 @@ body{
   margin-bottom: 0.33rem;
   text-align: center;
   font-family: BazarMedium, sans-serif;
-  font-size: 90px;
+  font-size: 48px;
   text-shadow: 1px 2px #FCFAF7,3px 4px #484A4D;
+}
+
+@media (min-width: 1024px){
+  .header{
+    font-size: 90px;
+  }
 }
 
 hr.top-dashed{
@@ -1173,23 +1167,10 @@ button.active::before{
   margin: auto;
   height: 480px;
   width: 320px;
+  --tw-scale-x: .9;
+  --tw-scale-y: .9;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   perspective: 1000px;
-}
-
-@media not all and (min-width: 768px){
-  .card-container{
-    --tw-scale-x: .75;
-    --tw-scale-y: .75;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-}
-
-@media (min-width: 768px){
-  .card-container{
-    --tw-scale-x: .9;
-    --tw-scale-y: .9;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
 }
 
 @media (min-width: 1024px){
@@ -1287,6 +1268,11 @@ button.active::before{
 
   .lg\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .lg\:text-3xl{
