--- a/src/style/output.css
+++ b/src/style/output.css
@@ -642,6 +642,10 @@ video {
   height: 2.75rem;
 }
 
+.h-3\/4{
+  height: 75%;
+}
+
 .h-\[100vh\]{
   height: 100vh;
 }
@@ -650,12 +654,40 @@ video {
   height: 100%;
 }
 
+.h-1\/4{
+  height: 25%;
+}
+
+.h-1\/2{
+  height: 50%;
+}
+
 .w-3\/4{
   width: 75%;
 }
 
 .w-full{
   width: 100%;
+}
+
+.w-1\/2{
+  width: 50%;
+}
+
+.w-1\/4{
+  width: 25%;
+}
+
+.w-2\/5{
+  width: 40%;
+}
+
+.w-\[30\%\]{
+  width: 30%;
+}
+
+.w-2\/3{
+  width: 66.666667%;
 }
 
 .origin-bottom-left{
@@ -672,10 +704,6 @@ video {
 
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row{
@@ -700,6 +728,10 @@ video {
 
 .items-center{
   align-items: center;
+}
+
+.justify-start{
+  justify-content: flex-start;
 }
 
 .justify-center{
@@ -735,6 +767,10 @@ video {
        column-gap: 0px;
 }
 
+.gap-y-3{
+  row-gap: 0.75rem;
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
@@ -749,6 +785,10 @@ video {
 
 .rounded-\[4px\]{
   border-radius: 4px;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
 }
 
 .border-\[5px\]{
@@ -793,6 +833,14 @@ video {
 .bg-slate-200{
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
+.bg-\[url\(src\/assets\/picts\/a1_team\.jpg\)\]{
+  background-image: url(src/assets/picts/a1_team.jpg);
+}
+
+.bg-\[url\(\'src\/assets\/picts\/a1_team\.jpg\'\)\]{
+  background-image: url('src/assets/picts/a1_team.jpg');
 }
 
 .p-3{
@@ -902,6 +950,10 @@ video {
 
 .leading-10{
   line-height: 2.5rem;
+}
+
+.leading-5{
+  line-height: 1.25rem;
 }
 
 .text-\[\#F6EDD8\]{
@@ -1174,11 +1226,14 @@ button.active::before{
 
 .card-container{
   position: relative;
-  margin: auto;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
   height: 480px;
   width: 320px;
-  --tw-scale-x: .85;
-  --tw-scale-y: .85;
+  --tw-scale-x: .70;
+  --tw-scale-y: .70;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   perspective: 1000px;
 }
@@ -1221,23 +1276,8 @@ button.active::before{
 
 /* ? CARDS */
 
-.group:hover .group-hover\:bg-blue-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-
 .group:hover .group-hover\:\[transform\:rotateY\(180deg\)\]{
   transform: rotateY(180deg);
-}
-
-.group:hover .group-hover\:after\:absolute::after{
-  content: var(--tw-content);
-  position: absolute;
-}
-
-.group:hover .group-hover\:after\:w-9::after{
-  content: var(--tw-content);
-  width: 2.25rem;
 }
 
 @media not all and (min-width: 1024px){
@@ -1287,8 +1327,32 @@ button.active::before{
     height: 4rem;
   }
 
+  .lg\:h-1\/2{
+    height: 50%;
+  }
+
   .lg\:w-1\/2{
     width: 50%;
+  }
+
+  .lg\:w-3\/4{
+    width: 75%;
+  }
+
+  .lg\:w-2\/5{
+    width: 40%;
+  }
+
+  .lg\:w-3\/5{
+    width: 60%;
+  }
+
+  .lg\:w-4\/12{
+    width: 33.333333%;
+  }
+
+  .lg\:w-1\/3{
+    width: 33.333333%;
   }
 
   .lg\:grid-cols-1{
@@ -1317,6 +1381,21 @@ button.active::before{
   .lg\:text-5xl{
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .lg\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 
