--- a/src/style/output.css
+++ b/src/style/output.css
@@ -584,6 +584,54 @@ video {
   top: 0px;
 }
 
+.left-1\/2{
+  left: 50%;
+}
+
+.left-24{
+  left: 6rem;
+}
+
+.left-1\/4{
+  left: 25%;
+}
+
+.left-1\/3{
+  left: 33.333333%;
+}
+
+.right-1\/4{
+  right: 25%;
+}
+
+.top-2{
+  top: 0.5rem;
+}
+
+.bottom-2{
+  bottom: 0.5rem;
+}
+
+.-bottom-2{
+  bottom: -0.5rem;
+}
+
+.-bottom-6{
+  bottom: -1.5rem;
+}
+
+.-bottom-12{
+  bottom: -3rem;
+}
+
+.-bottom-14{
+  bottom: -3.5rem;
+}
+
+.bottom-0{
+  bottom: 0px;
+}
+
 .z-50{
   z-index: 50;
 }
@@ -612,10 +660,6 @@ video {
 
 .mb-3{
   margin-bottom: 0.75rem;
-}
-
-.mb-4{
-  margin-bottom: 1rem;
 }
 
 .mb-8{
@@ -654,40 +698,27 @@ video {
   height: 100%;
 }
 
-.h-1\/4{
-  height: 25%;
-}
-
-.h-1\/2{
-  height: 50%;
-}
-
-.w-3\/4{
-  width: 75%;
+.w-2\/3{
+  width: 66.666667%;
 }
 
 .w-full{
   width: 100%;
 }
 
-.w-1\/2{
-  width: 50%;
+.w-max{
+  width: -moz-max-content;
+  width: max-content;
 }
 
-.w-1\/4{
-  width: 25%;
+.w-min{
+  width: -moz-min-content;
+  width: min-content;
 }
 
-.w-2\/5{
-  width: 40%;
-}
-
-.w-\[30\%\]{
-  width: 30%;
-}
-
-.w-2\/3{
-  width: 66.666667%;
+.w-fit{
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .origin-bottom-left{
@@ -758,10 +789,6 @@ video {
   gap: 0.75rem;
 }
 
-.gap-5{
-  gap: 1.25rem;
-}
-
 .gap-x-0{
   -moz-column-gap: 0px;
        column-gap: 0px;
@@ -783,16 +810,20 @@ video {
   border-radius: 16px;
 }
 
-.rounded-\[4px\]{
-  border-radius: 4px;
-}
-
 .rounded-md{
   border-radius: 0.375rem;
 }
 
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
 .border-\[5px\]{
   border-width: 5px;
+}
+
+.border{
+  border-width: 1px;
 }
 
 .border-\[\#846C1B\]{
@@ -835,14 +866,6 @@ video {
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
-.bg-\[url\(src\/assets\/picts\/a1_team\.jpg\)\]{
-  background-image: url(src/assets/picts/a1_team.jpg);
-}
-
-.bg-\[url\(\'src\/assets\/picts\/a1_team\.jpg\'\)\]{
-  background-image: url('src/assets/picts/a1_team.jpg');
-}
-
 .p-3{
   padding: 0.75rem;
 }
@@ -853,6 +876,14 @@ video {
 
 .p-6{
   padding: 1.5rem;
+}
+
+.p-1{
+  padding: 0.25rem;
+}
+
+.p-2{
+  padding: 0.5rem;
 }
 
 .px-12{
@@ -948,10 +979,6 @@ video {
   font-weight: 500;
 }
 
-.leading-10{
-  line-height: 2.5rem;
-}
-
 .leading-5{
   line-height: 1.25rem;
 }
@@ -966,6 +993,22 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.opacity-80{
+  opacity: 0.8;
+}
+
+.opacity-70{
+  opacity: 0.7;
+}
+
+.opacity-50{
+  opacity: 0.5;
+}
+
+.opacity-0{
+  opacity: 0;
+}
+
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -976,6 +1019,12 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-all{
+  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1276,6 +1325,22 @@ button.active::before{
 
 /* ? CARDS */
 
+.group:hover .group-hover\:-bottom-14{
+  bottom: -3.5rem;
+}
+
+.group:hover .group-hover\:-bottom-12{
+  bottom: -3rem;
+}
+
+.group:hover .group-hover\:opacity-50{
+  opacity: 0.5;
+}
+
+.group:hover .group-hover\:opacity-70{
+  opacity: 0.7;
+}
+
 .group:hover .group-hover\:\[transform\:rotateY\(180deg\)\]{
   transform: rotateY(180deg);
 }
@@ -1327,30 +1392,6 @@ button.active::before{
     height: 4rem;
   }
 
-  .lg\:h-1\/2{
-    height: 50%;
-  }
-
-  .lg\:w-1\/2{
-    width: 50%;
-  }
-
-  .lg\:w-3\/4{
-    width: 75%;
-  }
-
-  .lg\:w-2\/5{
-    width: 40%;
-  }
-
-  .lg\:w-3\/5{
-    width: 60%;
-  }
-
-  .lg\:w-4\/12{
-    width: 33.333333%;
-  }
-
   .lg\:w-1\/3{
     width: 33.333333%;
   }
@@ -1376,26 +1417,6 @@ button.active::before{
   .lg\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
-  }
-
-  .lg\:text-5xl{
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .lg\:text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .lg\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
-  .lg\:text-sm{
-    font-size: 0.875rem;
-    line-height: 1.25rem;
   }
 }
 
